--- a/synapsis/src/main/resources/templates/pages/aboutUs.html
+++ b/synapsis/src/main/resources/templates/pages/aboutUs.html
@@ -7,33 +7,52 @@
     <div class="container flex flex-wrap flex-col border p-8 ml-12  mt-10 shadow-sm w-2/3 lg:w-2/3 mb-20 rounded-sm">
 
 
-        <h2 class="text-left text-3xl">Our History</h2>
+        <h2 class="langEN text-left text-3xl">Our History</h2>
+        <h2 class="langFR text-left text-3xl">Notre histoire</h2>
+
         <hr class="border-t border-grey-light">
-        <p class="text-left  text-grey text-xl">As one of the biggest canadian professional networking resource we are
+        <p class="langEN text-left  text-grey text-xl">As one of the biggest canadian professional networking resource we are
             proud of serving millions of customers since 2020.
             Having our initial startup in 2020, in this very short period of time we made a huge progress in achieving
-            our vision and goals. </p>
+            our vision and goals.</p>
+        <p class="langFR text-left  text-grey text-xl">En tant que l'une des plus grandes ressources de réseautage professionnel au Canada, nous sommes
+            fier de servir des millions de clients depuis 2020.
+            Ayant notre démarrage initial en 2020, dans cette très courte période de temps, nous avons fait d'énormes progrès dans la réalisation
+            notre vision et nos objectifs.</p>
         <br><br>
 
-        <h2 class="text-left text-3xl">Our Vision</h2>
+        <h2 class="langEN text-left text-3xl">Our Vision</h2>
+        <h2 class="langFR text-left text-3xl">Notre vision</h2>
+
         <hr class="border-t border-grey-light">
-        <p class="text-left text-grey text-xl">Provide social-professional networking and job opportunity freely to
+        <p class="langEN text-left text-grey text-xl">Provide social-professional networking and job opportunity freely to
             everyone at a safe environment.</p>
+        <p class="langFR text-left text-grey text-xl">Offrir un réseau social-professionnel et des opportunités d'emploi librement à
+            tout le monde dans un environnement sécurisé.</p>
         <br><br>
 
-        <h2 class="text-left text-3xl">Our Mission</h2>
+        <h2 class="langEN text-left text-3xl">Our Mission</h2>
+        <h2 class="langFR text-left text-3xl">Notre mission</h2>
         <hr class="border-t border-grey-light">
-        <p class="text-left text-grey text-xl">Our mission is to be able to give everyone the chance to grow their
+        <p class="langEN text-left text-grey text-xl">Our mission is to be able to give everyone the chance to grow their
             professional networking and help them achieve their dreams, find job opportunities and become
             successful. </p>
+        <p class="langFR text-left text-grey text-xl">Notre mission est de pouvoir donner à chacun la chance de développer son
+            réseautage professionnel et les aider à réaliser leurs rêves, trouver des opportunités d'emploi et
+            réussir. </p>
         <br><br>
 
-        <h2 class="text-left text-3xl">Our Team </h2>
+        <h2 class="langEN text-left text-3xl">Our Team </h2>
+        <h2 class="langFR text-left text-3xl">Notre équipe</h2>
         <hr class="border-t border-grey-light">
-        <p class="text-left text-grey text-xl">We started as nine software developers and our team continues to grow
+        <p class="langEN text-left text-grey text-xl">We started as nine software developers and our team continues to grow
             more.</p>
-        <p class="text-left text-grey text-xl">Our team has a variety of skills and has strong background in
+        <p class="langFR text-left text-grey text-xl">Nous avons commencé avec neuf développeurs de logiciels et notre équipe continue de grandir
+            plus.</p>
+        <p class="langEN text-left text-grey text-xl">Our team has a variety of skills and has strong background in
             development, prototyping and management. </p>
+        <p class="langFR text-left text-grey text-xl">Notre équipe possède des compétences variées et possède une solide expérience dans
+            développement, prototypage et gestion. </p>
     </div>
 </div>
 </html>
