--- a/synapsis/src/main/resources/templates/pages/contactUs.html
+++ b/synapsis/src/main/resources/templates/pages/contactUs.html
@@ -3,7 +3,7 @@
       layout:decorate="_layout">
 <div layout:fragment="content">
 
-
+<div  class="langEN">
   <div class="container flex flex-wrap flex-col border text-center p-8 mx-auto  mt-20 shadow-sm w-2/3 lg:w-2/3 mb-20 rounded-sm">
 
     <div class="text-4xl lg:text-5xl text-black font-medium font-serif bg-primary-variant ">Have questions about our services or need to speak with our Admin team ?
@@ -22,14 +22,28 @@
     <br>
 
   </div>
+</div>
 
 
+  <div  class="langFR">
+    <div class="container flex flex-wrap flex-col border text-center p-8 mx-auto  mt-20 shadow-sm w-2/3 lg:w-2/3 mb-20 rounded-sm">
 
+      <div class="text-4xl lg:text-5xl text-black font-medium font-serif bg-primary-variant ">Avez vous des questions sur nos services ou vous avez besoin de parler avec notre équipe d'administration ?
+      </div>
+      <br> <br>
+      <hr class="border-t border-grey-light">
+      <div class="text-lg md:text-xl lg:text-3xl text-grey font-normal mt-8 lg:mt-16">Vous pouvez nous appeler ou nous envoyer un courriel à tout moment du lundi au vendredi entre 10h00 et 18h00 heure de l'Est
+        et un membre de notre équipe vous guidera pour toutes vos questions!
+      </div>
 
+      <div class="text-lg md:text-xl lg:text-2xl text-grey font-normal mt-8 lg:mt-16">numéro de téléphone: 514-444-4646
+      </div>
+      <br>
+      <div class="text-lg md:text-xl lg:text-2xl text-grey font-normal mt-8 lg:mt-16">Adresse courriel: joeadmin@mail.com
+      </div>
+      <br>
 
-
-
-
-
+    </div>
+  </div>
 </div>
 </html>
