--- a/synapsis/src/main/resources/templates/pages/accessDenied.html
+++ b/synapsis/src/main/resources/templates/pages/accessDenied.html
@@ -30,9 +30,13 @@
 <body>
     <div class="flex items-center justify-center h-screen">
         <div class="flex flex-col items-center border border-black-variant p-6 bg-light">
-            <h1 class="text-4xl font-extrabold">Access Denied</h1>
-            <p>You are not authorized to view this page.</p>
-            <a th:href="@{/}" class="underline">Return to homepage</a>
+            <h1 class="langEN text-4xl font-extrabold">Access Denied</h1>
+            <h1 class="langFR text-4xl font-extrabold">Accès refusé</h1>
+            <p class="langEN">You are not authorized to view this page.</p>
+            <p class="langFR">Vous n'êtes pas autorisé de voir cette page.</p>
+            <a th:href="@{/}" class="langEN underline">Return to homepage</a>
+            <a th:href="@{/}" class="langFR underline">Retournez à la page d'accueil</a>
+
         </div>
     </div>
 </body>
