--- a/synapsis/src/main/resources/templates/pages/register.html
+++ b/synapsis/src/main/resources/templates/pages/register.html
@@ -3,6 +3,7 @@
       layout:decorate="_layout">
 <div layout:fragment="content">
     <p th:text="${error}"></p>
+    <div class="langEN">
     <form th:action="@{/register}" th:object="${registrationRequest}" method="post">
         <div class="flex flex-col border p-8 justify-center mx-auto mt-10 shadow-xl w-4/5 lg:w-2/3 mb-20 rounded-sm">
 
@@ -73,6 +74,81 @@
             </button>
         </div>
     </form>
+    </div>
+
+
+    <div class="langFR">
+        <form th:action="@{/register}" th:object="${registrationRequest}" method="post">
+            <div class="flex flex-col border p-8 justify-center mx-auto mt-10 shadow-xl w-4/5 lg:w-2/3 mb-20 rounded-sm">
+
+                <div class="mb-4">
+                    <img src="../../assets/synapsis_logo.svg" class="object-contain h-12 w-12" alt="Synapsis Logo">
+                </div>
+
+                <p class="font-thin text-3xl m-2 text-black text-center">Créez votre profil Synapsis</p>
+
+                <div class="flex flex-col space-y-4 mt-4 md:flex-row md:justify-between md:h-14 md:space-x-4 md:space-y-0">
+                    <input type="email" th:field="*{email}" placeholder="Adresse courriel"
+                           class="font-thin font-serif border border-grey pl-3 justify-around rounded-md hover:bg-gray-300 md:w-1/2 w-full h-14"
+                           required/>
+                    <input type="text" th:field="*{name}" placeholder="Le nom"
+                           class="font-thin font-serif border border-grey pl-3 rounded-md hover:bg-gray-300 md:w-1/2 w-full h-14"
+                           required/>
+                </div>
+
+                <div class="flex flex-col space-y-4 mt-4 md:flex-row md:justify-between md:h-14 md:space-x-4 md:space-y-0">
+                    <input type="password" id="passwordf" th:field="*{password}" placeholder="Mot de passe"
+                           class="font-thin font-serif border border-grey pl-3 content-center rounded-md hover:bg-gray-300 md:w-1/2 w-full h-14"
+                           required/>
+                    <input type="password" id="confirmPasswordf" placeholder="Confirmez le mot de passe"
+                           th:onmouseout="check_passwordf()"
+                           class="font-thin font-serif border border-grey pl-3 content-center rounded-md hover:bg-gray-300 md:w-1/2 w-full h-14"
+                           required/>
+                </div>
+
+                <span id="mismatch_passwordf" class="text-primary hidden">Les mots de passe fournis ne correspondent pas!</span>
+
+                <div class="border border-grey p-3 mt-4 rounded-md hover:bg-gray-300">
+                    <fieldset required>
+                        <legend class="font-thin font-serif text-grey">Sélectionnez le type de compte que vous souhaitez utiliser:
+                        </legend>
+                        <div>
+                            <input type="radio" name="role" th:field="*{role}" id="candidate-button" value="CANDIDATE"/>
+                            <label for="candidate-button" class="font-thin font-serif text-grey">Candidat(e)</label>
+                            <br/>
+
+                            <input type="radio" name="role" th:field="*{role}" id="company-button" value="COMPANY"/>
+                            <label for="company-button" class="font-thin font-serif text-grey">Entreprise</label>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <p class="font-thin text-2xl text-center text-grey mt-10">Questions de sécurité</p>
+                <p class="font-thin text-center text-grey">Merci de répondre aux questions suivantes.</p>
+                <p class="font-thin text-center text-grey mb-2">Ceux-ci seront utilisés pour vérifier votre identité dans le
+                    futur.</p>
+
+                <p class="mt-4">Quel était le nom de votre premier animal de compagnie?</p>
+                <input type="text" th:field="*{securityAnswer1}" placeholder="Entrez votre réponse ici"
+                       class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
+                       required/>
+
+                <p class="mt-4">Quel est le nom de jeune fille de votre mère?</p>
+                <input type="text" th:field="*{securityAnswer2}" placeholder="Entrez votre réponse ici"
+                       class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
+                       required/>
+
+                <p class="mt-4">Quel est le deuxième prénom de votre plus jeune enfant?</p>
+                <input type="text" th:field="*{securityAnswer3}" placeholder="Entrez votre réponse ici"
+                       class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
+                       required/>
+
+                <button type="submit" class="btn btn-primary mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
+                   transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Enregistrer
+                </button>
+            </div>
+        </form>
+    </div>
 
     <script type="text/javascript" th:src="@{/js/changePassword.js}"></script>
 
