--- a/synapsis/src/main/resources/templates/pages/settings.html
+++ b/synapsis/src/main/resources/templates/pages/settings.html
@@ -2,6 +2,8 @@
 <html xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
+
+    <div class="langEN">
     <div class="flex flex-col md:flex-row justify-evenly mt-16">
         <div class="flex flex-col w-3/5 2xl:w-2/5 bg-light rounded-2xl p-6 mx-4">
             <h1 class="text-2xl lg:text-5xl font-black font-serif mb-4">Notification Preferences</h1>
@@ -47,5 +49,55 @@
                 Account</a>
         </div>
     </div>
+        </div>
+
+
+
+<div class="langFR">
+    <div class="flex flex-col md:flex-row justify-evenly mt-16">
+        <div class="flex flex-col w-3/5 2xl:w-2/5 bg-light rounded-2xl p-6 mx-4">
+            <h1 class="text-2xl lg:text-5xl font-black font-serif mb-4">Préférences de notification</h1>
+            <h3 class="text-2xl lg:text-4xl font-serif mb-4">Notifications par courriel</h3>
+            <form th:action="@{/updateSettings}" th:object="${updateSettingsRequest}" method="post">
+                <div class="block ml-4 font-serif text-lg lg:text-2xl mb-4">
+                    <p class="inline">Emplois recommandés</p>
+                    <label class="switch float-right mr-16">
+                        <input type="checkbox" name="jobEmailNotificationsOn"
+                               th:checked="${settings.isJobEmailNotificationsOn()}">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="block ml-4 font-serif text-lg lg:text-2xl mb-4">
+                    <p class="inline">Messages d'autres utilisateurs</p>
+                    <label class="switch float-right mr-16">
+                        <input type="checkbox" name="messageEmailNotificationsOn"
+                               th:checked="${settings.isMessageEmailNotificationsOn()}">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="block ml-4 font-serif text-lg lg:text-2xl mb-4">
+                    <p class="inline">Changements de connexion</p>
+                    <label class="switch float-right mr-16">
+                        <input type="checkbox" name="connectionEmailNotificationsOn"
+                               th:checked="${settings.isConnectionEmailNotificationsOn()}">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="flex">
+                    <button type="submit" class="btn btn-primary mt-3 bg-primary font-sans mx-auto">
+                        Sauvegarder
+                    </button>
+                </div>
+            </form>
+
+        </div>
+        <div class="flex flex-col w-3/5 lg:w-[354px] 2xl:w-1/4 self-start bg-light rounded-2xl p-6 mt-10 md:mt-0 mx-4">
+            <a class="text-lg lg:text-2xl text-black-variant font-serif font-bold hover:text-black" th:href="@{/passwordupdate}">
+                Changer le mot de passe</a>
+            <hr class="my-2 lg:my-4 bg-black h-0.5">
+            <a class="text-lg lg:text-2xl text-primary font-serif font-bold hover:text-primary-variant">Supprimer le compte</a>
+        </div>
+    </div>
+</div>
 </div>
 </html>
