--- a/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
+++ b/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
@@ -13,7 +13,7 @@
                 <img src="../../assets/synapsis_logo.svg" class="object-contain h-12 w-12" alt="Synapsis Logo">
             </div>
 
-            <p class="font-bold text-lg md:text-xl lg:text-3xl text-black-variant text-center">Application for [[${company}]] - [[${position}]]</p>
+            <p class="font-bold text-lg md:text-xl lg:text-3xl text-black-variant text-center">Application for [[${company.name}]] - [[${position}]]</p>
             <p class="font-thin text-grey text-center mb-4">Please complete the form below to apply for this position.</p>
 
             <input type="hidden" name="jobId" th:value="${jobId}">
