--- a/synapsis/src/main/resources/templates/pages/updatecompanypage.html
+++ b/synapsis/src/main/resources/templates/pages/updatecompanypage.html
@@ -56,8 +56,8 @@
 
             <div>
                 <label>Location</label><br>
-                <select type="text" id="location" name="country" th:value="${profile.location}"
-                        class="country mb-2 text-left font-normal tracking-tight text-gray-900">
+                <select type="text" id="location" name="location" th:value="${profile.location}"
+                        class="location mb-2 text-left font-normal tracking-tight text-gray-900">
                     <option value="" disabled selected>Select a country</option>
                 </select>
             </div>
